[package]
name = "rust_sdr_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
if-addrs = "0.7.0"
socket2 = "0.4.7"
bytebuffer-rs = "2.0.1"
lazy_static = "1.4.0"
fast-math = "0.1"
cpal = "0.14.0"
rfd = "0.10.0"
itertools = "0.10.5"
emath = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "rustsdrlib"
crate-type = ["cdylib"]